first attempt at resolving bean dependencies at app startup via static code analysis